--- a/app.json
+++ b/app.json
@@ -5,6 +5,14 @@
       "bundler": "metro"
     },
     "name": "memorabilia-app",
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ],
     "slug": "memorabilia-app"
   }
 }
