--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "expo": "^48.0.7",
     "expo-auth-session": "^4.0.3",
     "expo-av": "^13.2.1",
+    "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
+    "expo-file-system": "^15.2.2",
     "expo-font": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-media-library": "^15.2.3",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "expo-video-thumbnails": "^7.2.1",
     "expo-web-browser": "^12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
