--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/netinfo": "^9.4.1",
+    "@react-navigation/stack": "^6.3.17",
+    "aws-amplify": "^5.3.3",
+    "aws-amplify-react-native": "^7.0.2",
     "axios": "^1.4.0",
     "base-64": "^1.0.0",
     "expo": "^48.0.7",
