--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.0.3",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/stack": "^6.3.17",
     "aws-amplify": "^5.3.3",
     "aws-amplify-react-native": "^7.0.2",
