--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,41 +1,6 @@
 {
-  "api": {
-    "memorabilia": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "memorabilia582582ec"
-        }
-      ],
-      "output": {
-        "authConfig": {
-          "additionalAuthenticationProviders": [
-            {
-              "apiKeyConfig": {
-                "apiKeyExpirationDate": "2023-10-01T03:03:28.350Z",
-                "apiKeyExpirationDays": 90,
-                "description": "memorabilia app"
-              },
-              "authenticationType": "API_KEY"
-            }
-          ],
-          "defaultAuthentication": {
-            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-            "userPoolConfig": {
-              "userPoolId": "authmemorabilia582582ec"
-            }
-          }
-        }
-      },
-      "providerPlugin": "awscloudformation",
-      "service": "AppSync"
-    }
-  },
   "auth": {
-    "memorabilia582582ec": {
+    "memorabilia5379f63c": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
@@ -60,6 +25,48 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    }
+  },
+  "function": {
+    "S3Trigger209fd46d": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_S3Trigger209fd46d_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger209fd46d"
+        }
+      ]
+    },
+    "AMPLIFY_function_S3Trigger209fd46d_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger209fd46d"
+        }
+      ]
+    }
+  },
+  "storage": {
+    "memorabilia": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn",
+            "LambdaExecutionRole"
+          ],
+          "category": "function",
+          "resourceName": "S3Trigger209fd46d"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
     }
   }
 }
