added selection screen + entry viewer

--- a/app.json
+++ b/app.json
@@ -5,6 +5,15 @@
       "bundler": "metro"
     },
     "name": "memorabilia-app",
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#000000"
+    },
+
+    "backgroundColor": "#000000",
+
     "plugins": [
       [
         "expo-image-picker",
