--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/stack": "^6.3.17",
     "aws-amplify": "^5.3.3",
     "aws-amplify-react-native": "^7.0.2",
@@ -26,6 +26,7 @@
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "^2.4.0",
     "expo-video-thumbnails": "^7.2.1",
     "expo-web-browser": "^12.1.1",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated-carousel": "^3.4.0",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -44,7 +46,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@iconify/react": "^4.1.1"
   },
   "resolutions": {
     "metro": "^0.73.7",
