--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,7 +7,7 @@
             "UserPoolId"
           ],
           "category": "auth",
-          "resourceName": "memorabiliacf7b5c96"
+          "resourceName": "memorabiliaad23f5f7"
         }
       ],
       "output": {
@@ -15,9 +15,9 @@
           "additionalAuthenticationProviders": [
             {
               "apiKeyConfig": {
-                "apiKeyExpirationDate": "2023-10-03T03:46:12.929Z",
+                "apiKeyExpirationDate": "2023-10-07T00:07:44.207Z",
                 "apiKeyExpirationDays": 90,
-                "description": "memo api"
+                "description": "admin key memo"
               },
               "authenticationType": "API_KEY"
             }
@@ -25,7 +25,7 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authmemorabiliacf7b5c96"
+              "userPoolId": "authmemorabiliaad23f5f7"
             }
           }
         }
@@ -35,7 +35,7 @@
     }
   },
   "auth": {
-    "memorabiliacf7b5c96": {
+    "memorabiliaad23f5f7": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
@@ -48,7 +48,8 @@
           "passwordPolicyMinLength": 8
         },
         "signupAttributes": [
-          "EMAIL"
+          "EMAIL",
+          "NAME"
         ],
         "socialProviders": [],
         "usernameAttributes": [
@@ -62,11 +63,5 @@
       "service": "Cognito"
     }
   },
-  "storage": {
-    "memostorage": {
-      "dependsOn": [],
-      "providerPlugin": "awscloudformation",
-      "service": "S3"
-    }
-  }
+  "storage": {}
 }
