--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -12,16 +12,7 @@
       ],
       "output": {
         "authConfig": {
-          "additionalAuthenticationProviders": [
-            {
-              "apiKeyConfig": {
-                "apiKeyExpirationDate": "2023-10-07T00:07:44.207Z",
-                "apiKeyExpirationDays": 90,
-                "description": "admin key memo"
-              },
-              "authenticationType": "API_KEY"
-            }
-          ],
+          "additionalAuthenticationProviders": [],
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
@@ -63,5 +54,11 @@
       "service": "Cognito"
     }
   },
-  "storage": {}
+  "storage": {
+    "memostorage": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
+    }
+  }
 }
