--- a/package.json
+++ b/package.json
@@ -6,58 +6,52 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/stack": "^6.3.17",
     "aws-amplify": "^5.3.3",
     "aws-amplify-react-native": "^7.0.2",
     "axios": "^1.4.0",
     "base-64": "^1.0.0",
-    "expo": "^48.0.7",
-    "expo-auth-session": "^4.0.3",
-    "expo-av": "^13.2.1",
-    "expo-camera": "~13.2.1",
-    "expo-constants": "~14.2.1",
-    "expo-file-system": "^15.2.2",
-    "expo-font": "^11.1.1",
-    "expo-image-picker": "^14.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-media-library": "^15.2.3",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "^2.4.0",
-    "expo-video-thumbnails": "^7.2.1",
-    "expo-web-browser": "^12.1.1",
+    "expo": "^49.0.22",
+    "expo-auth-session": "~5.0.2",
+    "expo-av": "~13.4.1",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
+    "expo-file-system": "~15.4.5",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-linking": "~5.0.2",
+    "expo-media-library": "~15.4.1",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-video-thumbnails": "~7.4.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.6",
     "react-native-calendars": "^1.1299.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.4.0",
     "react-native-redash": "^18.1.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@iconify/react": "^4.1.1"
-  },
-  "resolutions": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
-  },
-  "overrides": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
+    "@iconify/react": "^4.1.1",
+    "babel-preset-expo": "^9.5.0"
   },
   "name": "memorabilia-app",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "main": "expo-router/entry"
 }
